--- a/splinter.tex
+++ b/splinter.tex
@@ -151,16 +151,36 @@ these might be used to infer the source and destination.
 Splinter supports a subset of the SQL language, which we describe in Section~\ref{sec:querymodel}.
 
 The easiest way to achieve this property would be for users to download the whole database
-and run the queries locally.
-However, this requires substantial bandwidth and computation for the user.
-Moreover, many datasets change constantly, e.g., to include traffic information or new product reviews.
-It would be impractical for the user to continuously download these updates.
-Therefore, our performance objective is to minimize computation and communication costs.
-For a database of $n$ records, Splinter only requires $O(n \log n)$ computation at the
-providers and $O(\log n)$ communication (Section~\ref{sec:complex}).
+and run the queries locally. However, downloading so much data might not 
+be feasible or efficient in terms of bandwidth and computation. Below,
+we describe in more detail the specific use cases for Splinter.
+%However, this requires substantial bandwidth and computation for the user.
+%Moreover, many datasets change constantly, e.g., to include traffic information or new product reviews.
+%It would be impractical for the user to continuously download these updates.
+%Therefore, our performance objective is to minimize computation and communication costs.
+%For a database of $n$ records, Splinter only requires $O(n \log n)$ computation at the
+%providers and $O(\log n)$ communication (Section~\ref{sec:complex}).
 
 \subsubsection{Use Cases}
+Although Splinter can handle complex queries, it is not
+meant as a private query system for all SQL-like databases.
+Splinter's use cases are similar to those of PIR. More specifically,
+the queries contain sensitive user information and need to be 
+protected, but the database itself might not be sensitive. 
 
+Splinter works well for applications with large databases
+and regular updates because downloading the whole
+database and receiving updates would be more expensive in terms
+of bandwidth than querying the Splinter service. Services,
+like flight prices, map navigation, stock prices, 
+and domain name availability searches, are good fits for Splinter.
+Even if it is more efficient for the user to download the whole
+database and updates, Splinter can still be useful.
+Many applications might enforce rate limiting or query restrictions
+to prevent users from accessing the whole database
+because the data might contain proprietary information. For example,
+data owners like Google Maps and Yelp might allow limited querying
+through an API but not give complete access to their dataset.
 
 \subsubsection{Threat Model}
 Splinter keeps the parameters in the user's query hidden
